src/Chamilo/Configuration/Resources/Css/Aqua/Bootstrap.css
/* ... */
.treeview .list-group .list-group-item .icon.node-icon.streaming {
	background-image: url(../../Images/Aqua/Treemenu/Streaming.png);
}

.treeview .list-group .list-group-item .icon.node-icon.trash {
	background-image: url(../../Images/Aqua/Treemenu/Trash.png);
}

.treeview .list-group .list-group-item .icon.node-icon.trash_full {
	background-image: url(../../Images/Aqua/Treemenu/TrashFull.png);
}

.treeview .list-group .list-group-item .icon.node-icon.quota {
	background-image: url(../../Images/Aqua/Treemenu/Quota.png);
}

.treeview .list-group .list-group-item .icon.node-icon.userview {
	background-image: url(../../Images/Aqua/Treemenu/Userview.png);
}

.treeview .list-group .list-group-item .icon.node-icon.publication {
	background-image: url(../../Images/Aqua/Treemenu/Publication.png);
}

.treeview .list-group .list-group-item .icon.node-icon.create {
	background-image: url(../../Images/Aqua/Treemenu/Create.png);
}

.treeview .list-group .list-group-item .icon.node-icon.add {
	background-image: url(../../Images/Aqua/Treemenu/Add.png);
}

.treeview .list-group .list-group-item .icon.node-icon.manage {
	background-image: url(../../Images/Aqua/Treemenu/Manage.png);
}

.treeview .list-group .list-group-item .icon.node-icon.rights {
	background-image: url(../../Images/Aqua/Treemenu/Rights.png);
}

.treeview .list-group .list-group-item .icon.node-icon.import {
	background-image: url(../../Images/Aqua/Treemenu/Import.png);
}

.treeview .list-group .list-group-item .icon.node-icon.external_instance
	{
	background-image: url(../../Images/Aqua/Treemenu/ExternalInstance.png);
}

.treeview .list-group .list-group-item .icon.node-icon.search_results {
	background-image: url(../../Images/Aqua/Treemenu/Search.png);
}

.treeview .list-group .list-group-item .icon.node-icon.shared_objects {
	background-image: url(../../Images/Aqua/Treemenu/SharedObjects.png);
}

.treeview .list-group .list-group-item .icon.node-icon.template {
	background-image: url(../../Images/Aqua/Treemenu/Template.png);
}

.treeview .list-group .list-group-item .icon.node-icon.hidden {
	background-image: url(../../Images/Aqua/Treemenu/Hidden.png);
}

.treeview .list-group .list-group-item .icon.node-icon.survey {
	background-image: url(../../Images/Aqua/Treemenu/Survey.png);
}

.treeview .list-group .list-group-item .icon.node-icon.survey_finished {
	background-image: url(../../Images/Aqua/Treemenu/SurveyFinished.png);
}

.treeview .list-group .list-group-item .icon.node-icon.type_category,
	.icon.node-icon.category {
	background: url(../../Images/Aqua/Treemenu/TreeFolderClosed.png) top
		left no-repeat;
}

.treeview .list-group .list-group-item .icon.node-icon.type_category {
	background: url(../../Images/Aqua/Treemenu/TreeFolderClosed.png) 0 0
		no-repeat;
}

/* ul.tree-menu li.current_path>div a.category, ul.tree-menu li.current>div a.category, */
/* 	ul.tree-menu li.current_path>div a.type_category, ul.tree-menu li.current>div a.type_category */
/* 	{ */
/* 	background: url(../../Images/Aqua/Treemenu/TreeFolderOpen.png) top left */
/* 		no-repeat; */
/* } */
.treeview .list-group .list-group-item .icon.node-icon.new_category {
	background-image:
		url(../../Images/Aqua/Treemenu/TreeFolderClosedNew.png);
}

.treeview .list-group .list-group-item .icon.node-icon.type_user {
	background-image: url(../../Images/Aqua/Treemenu/User.png);
}

.treeview .list-group .list-group-item .icon.node-icon.type_user_platform
	{
	background-image: url(../../Images/Aqua/Treemenu/UserPlatform.png);
}

.treeview .list-group .list-group-item .icon.node-icon.type_group {
	background-image: url(../../Images/Aqua/Treemenu/Group.png);
}

.treeview .list-group .list-group-item .icon.node-icon.type_completed {
	background-image: url(../../Images/Aqua/Status/OkMini.png);
	opacity: 1;
}

